--- a/frontend/src/css/Maleesha/header.css
+++ b/frontend/src/css/Maleesha/header.css
@@ -53,10 +53,7 @@ body{
 }
 
 .logo{
-    font-size: 2rem;
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
+    height: 50px;
 }
 
 .navbar a {
