--- a/frontend/src/css/Maleesha/Tables.css
+++ b/frontend/src/css/Maleesha/Tables.css
@@ -1,26 +1,58 @@
-table {
-    width: 100%;
-    border-collapse: collapse;
-    font-family: Arial, sans-serif;
-}
-th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-th {
-    background-color: #f2f2f2;
-}
-tr:hover {
-    background-color: #f5f5f5;
+.table-container-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-/* Styling for the tables */
 .table-container {
-    display: flex;
-    justify-content: space-between;
+    width: calc(50% - 25px); /* Set width for each table container (assuming 2 tables per row) */
+    margin-bottom: 50px; /* Add some space between tables */
+    
 }
+  
 .table {
-    flex: 1;
-    margin-right: 20px; /* Add spacing between tables */
+    width: 100%;
+    border-collapse: collapse;
 }
+  
+  .table th,
+  .table td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .table th {
+    background-color: #69ffb1; 
+  }
+  
+  /* different background color to odd rows
+  .table tbody tr:nth-child(odd) {
+    background-color: #812b2b; 
+  } */
+  
+  /* Hover effect
+  .table tbody tr:hover {
+    background-color: #fdf74a; /* Hover effect 
+  } */
+  
+  /* Set specific widths for columns */
+  .table th:nth-child(1),
+  .table td:nth-child(1) {
+    width: 70%; 
+    text-align: left;
+  }
+  
+  .table th:nth-child(2),
+  .table td:nth-child(2) {
+    width: 20%; 
+    text-align: center;
+  }
+  
+  /* Add some padding to the first column */
+  .table td:first-child,
+  .table th:first-child {
+    padding-left: 25px;
+  }
