--- a/frontend/src/css/Maleesha/Homepage.css
+++ b/frontend/src/css/Maleesha/Homepage.css
@@ -25,45 +25,15 @@ body {
     overflow: hidden;
 }
 
-.slide-image {
+.parallax-background .slide-image {
+    filter: brightness(80%);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    animation: slide 40s infinite; /* Increased duration */
-}
-
-@keyframes slide {
-    0%, 100% {
-        opacity: 0;
-        transform: scale(0.8) rotate(5deg);
-    }
-    20%, 80% {
-        opacity: 1;
-        transform: scale(1) rotate(0deg);
-    }
-    33%, 66% {
-        opacity: 0;
-        transform: scale(1.2) rotate(-5deg);
-    }
-}
-
-.slide-image:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.slide-image:nth-child(2) {
-    animation-delay: 10s; /* Display for at least 10 seconds */
-}
-
-.slide-image:nth-child(3) {
-    animation-delay: 20s; /* Display for at least 10 seconds */
-}
-
-
-
+  }
 
 .parallax-content {
     position: absolute;
@@ -71,8 +41,19 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: #000000;
     z-index: 2;
+}
+
+.parallax-content h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 50px;
+    color: white;
+}
+
+.parallax-content p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: white;
 }
 
 
