--- a/frontend/src/css/Maleesha/Quotation.css
+++ b/frontend/src/css/Maleesha/Quotation.css
@@ -189,4 +189,96 @@ h4{
     font-size: 1.2rem; /* Adjust size as needed */
   }
   
+  /*FORM CSS*/
+  /* General form styling */
+
+  .modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* semi-transparent overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; 
+}
+.appointmentFormContainer {
+    max-width: 600px; /* Increased width for a larger form */
+    margin: 40px auto; /* Added more margin for better spacing */
+    background: #fff;
+    padding: 30px; /* Increased padding for a roomier layout */
+    border-radius: 10px; /* More pronounced rounded corners */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    animation: fadeIn 0.5s ease-in-out; /* New animation for the form container */
+  }
   
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  
+  .close-icon {
+    position: absolute;
+    top: 15px; /* Adjusted positioning */
+    right: 15px;
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out; /* Smooth transition for hover effect */
+  }
+  
+  .close-icon:hover {
+    transform: scale(1.1); /* Slightly enlarges the icon on hover */
+  }
+  
+  .formField {
+    color: #222;
+    margin-bottom: 25px; /* Increased spacing between fields */
+    opacity: 0; /* Set initial opacity for animation */
+    animation: slideIn 0.5s forwards; /* New animation for form fields */
+    animation-delay: 0.3s; /* Delayed start for the animation */
+    font-weight: bold;
+  }
+
+.formField input[type="text"],
+.formField input[type="tel"],
+.formField input[type="date"],
+.formField input[type="time"],
+.formField input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+  
+  @keyframes slideIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+  
+  /* Button styling */
+  .formSubmitBtn {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(64, 81, 181);;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .formSubmitBtn:hover {
+    background-color: #41bd14;
+  }
+  
+  .instructionMessage {
+    color: #555;
+    font-size: 0.8em; 
+    margin-top: 5px; 
+}
