--- a/frontend/src/css/Maleesha/Dashboard.css
+++ b/frontend/src/css/Maleesha/Dashboard.css
@@ -1,6 +1,7 @@
 /* Dashboard Container */
 .dashboardContainer {
     display: flex;
+    max-height: 100vh;
   }
   
   /* Sidebar */
@@ -12,5 +13,9 @@
   .dashboardContent {
     flex: 1; /* Take up remaining space */
     padding: 20px;
+    overflow: hidden;
   }
   
+  .removeService{
+    margin-top: 100px;
+  }
