--- a/frontend/src/css/Maleesha/DashBoardHome.css
+++ b/frontend/src/css/Maleesha/DashBoardHome.css
@@ -89,3 +89,24 @@
     width: 400px;
     height: 400px;
 }
+
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid rgb(0, 255, 217); /* Choose your color */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 120s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
