--- a/frontend/src/css/Maleesha/Homepage.css
+++ b/frontend/src/css/Maleesha/Homepage.css
@@ -3,6 +3,8 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 
 .homepage {
