--- a/frontend/src/css/Maleesha/Footer.css
+++ b/frontend/src/css/Maleesha/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Container */
 #dk-footer {
-    background-color: #ffffff;
+    background-color: #f2f2f2;
     max-height: 550px;
   }
   
