--- a/frontend/src/CSS/Yasiru/Employeetable.css
+++ b/frontend/src/CSS/Yasiru/Employeetable.css
@@ -51,6 +51,7 @@
     display: inline-block;
     font-size: 16px;
     margin-top: 20px;
+    margin-right: 30px;
     border-radius: 4px;
     cursor: pointer;
   }
