--- a/frontend/src/css/Maleesha/LandingPage.css
+++ b/frontend/src/css/Maleesha/LandingPage.css
@@ -3,12 +3,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    scroll-behavior: smooth;  
   }
   
   .contentContainer {
     width: 80%; /* Adjust as needed */
-    max-width: 1000px; /* Limit the maximum width of the content */
+    max-width: 100%; /* Limit the maximum width of the content */
     align-self: center;
+    scroll-behavior: smooth;  
   }
 
   .logoBox {
@@ -24,6 +26,21 @@
   .logoSpace {
     width: 20px; /* Adjust space between images */
   }
+
+  /* .logoBox .logoImage {
+    box-shadow: 0 0 5px #fff;
+    animation: glowEffect 1.5s infinite alternate;
+  }
+  
+  @keyframes glowEffect {
+    from {
+      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FFCF00, 0 0 35px #FFCF00, 0 0 40px #FFCF00, 0 0 50px #FFCF00, 0 0 75px #FFCF00;
+    }
+    to {
+      box-shadow: 0 0 5px #fff, 0 0 25px #FFCF00, 0 0 50px #FFCF00, 0 0 100px #FFCF00, 0 0 200px #FFCF00;
+    }
+  } */
+  
 
   .studiologoImage{
     width: 700px;
