--- a/frontend/src/css/Maleesha/Tables.css
+++ b/frontend/src/css/Maleesha/Tables.css
@@ -85,6 +85,7 @@
 .table {
     width: 100%;
     border-collapse: collapse;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
   
   .table th,
