--- a/frontend/src/css/Maleesha/Homepage.module.css
+++ b/frontend/src/css/Maleesha/Homepage.module.css
@@ -9,7 +9,7 @@ body {
     scroll-behavior: smooth;
 }
 
-.header-container{
+.headercontainer{
   margin-top: 90px;
 }
 
@@ -17,14 +17,14 @@ body {
     width: 100%;
 }
 
-.slide-container {
+.slidecontainer {
     position: relative;
     height: 600px;
     overflow: hidden;
     margin: 40px;
 }
 
-.slide-background {
+.slidebackground {
     position: absolute;
     top: 0;
     left: 0;
@@ -33,7 +33,7 @@ body {
     overflow: hidden;
 }
 
-.slide-background .slide-image {
+.slidebackground .slideimage {
   /* filter: brightness(80%); */
   position: absolute;
   top: 0;
@@ -63,28 +63,28 @@ body {
 }
 
 /* Individual image styling */
-.slide-image:nth-child(1) {
+.slideimage:nth-child(1) {
   animation-delay: 0s;
 }
 
-.slide-image:nth-child(2) {
+.slideimage:nth-child(2) {
   animation-delay: 5s;
 }
 
-.slide-image:nth-child(3) {
+.slideimage:nth-child(3) {
   animation-delay: 10s;
 }
 
-.slide-image:nth-child(4) {
+.slideimage:nth-child(4) {
   animation-delay: 15s;
 }
 
-.slide-image:nth-child(5) {
+.slideimage:nth-child(5) {
   animation-delay: 20s;
 }
 
 
-.welcome-content {
+.welcomecontent {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -93,13 +93,13 @@ body {
     z-index: 2;
 }
 
-.welcome-content h1 {
+.welcomecontent h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 50px;
     color: white;
 }
 
-.welcome-content p {
+.welcomecontent p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: white;
@@ -110,24 +110,24 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.welcomeContainer .welcome-text1,
+.welcomeContainer .welcometext1,
 .containers h5 {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
 }
 
-.welcomeContainer .welcome-text2 {
+.welcomeContainer .welcometext2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
 }
 
 /* Styling adjustments for a better visual hierarchy */
-.welcomeContainer .welcome-text1 {
+.welcomeContainer .welcometext1 {
   font-size: 40px;
   color: #fff;
 }
 
-.welcomeContainer .welcome-text2 {
+.welcomeContainer .welcometext2 {
   font-size: 60px;
   line-height: 20%;
   color: #fff;
@@ -195,11 +195,11 @@ body {
 
 /* Media query for responsiveness */
 @media (max-width: 768px) {
-    .parallax-container {
+    .parallaxcontainer {
         height: 400px;
     }
 
-    .slide-image {
+    .slideimage {
         height: 400px;
     }
 }
@@ -243,7 +243,7 @@ body {
     color: #333333; /* Darker color for better readability */
   }
   
-  .location-icon {
+  .locationicon {
     margin-right: 10px;
     color: #363636; /* Color icon for a pop of color */
   }
@@ -263,7 +263,7 @@ body {
   }
 
   /*fixed bg*/
-  .fixed-background-section {
+  .fixedbackgroundsection {
     display: flex; 
     justify-content: flex-end; 
     /* align-items: stretch; */
@@ -278,7 +278,7 @@ body {
     margin-right: 40px;
   }
   
-.about-content {
+.aboutcontent {
     position: absolute;
     top: 0; 
     bottom: 0; 
@@ -291,7 +291,7 @@ body {
   }
   
   
-.about-content h3 {
+.aboutcontent h3 {
     margin-bottom: 30px;
     font-family: 'Playfair Display', serif;
     font-size: 28px; 
@@ -299,7 +299,7 @@ body {
     color: #212121; 
   }
   
-.about-content p {
+.aboutcontent p {
   text-align: justify;
   font-size: 16px; 
   line-height: 1.6; 
@@ -308,7 +308,7 @@ body {
 }
 
 
-.info-Container {
+.infoContainer {
     margin-top: 40px;
     margin-bottom: 40px;
     display: flex;
@@ -318,7 +318,7 @@ body {
     background-color: beige;
 }
 
-.staff-info, .experience-info, .services-info, .open-info {
+.staffinfo, .experienceinfo, .servicesinfo, .openinfo {
     margin-top: 20px;
     flex: none;
     display: flex; /* Display child elements as flex */
@@ -333,7 +333,7 @@ body {
     height: auto; /* Maintain aspect ratio */
 }
 
-.info-p {
+.infop {
     font-size: 1.2em; /* Adjust font size as needed */
     margin-top: 20px; /* Add margin between paragraphs */
     line-height: 2;
