--- a/frontend/src/css/Maleesha/Quotation.module.css
+++ b/frontend/src/css/Maleesha/Quotation.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,9 +8,9 @@
 }
 
 .contentContainer {
-    margin-top: 10px;
+    margin-top: 100px;
     text-align: center; /* Center-align the content within the container */
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .headingContainer {
@@ -20,7 +20,7 @@
 }
 
 .dropdownContainer {
-    /* display: flex; */
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
     margin-top: 80px;
@@ -41,10 +41,10 @@ label {
 select {
     width: 300px;
     padding: 8px;
-    border: 1px solid #ccc;
+    border: 1px solid #e1e1e1;
     border-radius: 5px;
-    background-color: #222;
-    color: white;
+    background-color: #e5e5e5;
+    color: rgb(0, 0, 0);
 }
 
 select:focus {
@@ -78,12 +78,12 @@ select:focus {
 }
 
 .serviceTable th {
-    background-color: #7d7d7d;
+    background-color: #e5e5e5;
     color: black;
 }
 
 .serviceTable tbody tr:nth-child(odd) {
-    background-color: #FFCF00;
+    background-color: #fff5c8;
     color: black;
 }
 
