--- a/frontend/src/CSS/Dasun/addFaqForm.css
+++ b/frontend/src/CSS/Dasun/addFaqForm.css
@@ -2,7 +2,7 @@
 
 /* Styling for the Add FAQ page container */
 #add_Faq_page {
-    width: 80%;
+    width: 95%;
     margin: auto;
     padding: 20px;
     background-color: #f7f7f7;
@@ -15,12 +15,14 @@
   #add_Faq_page_form_label_answer {
     font-weight: bold;
     color: #333;
+    margin-right: 10px;
+    margin-left: 10px;
   }
   
   /* Styling for the input fields */
   #add_Faq_page_form_input_question,
   #add_Faq_page_form_input_answer {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ddd;
