--- a/frontend/src/css/Maleesha/CostumePage.module.css
+++ b/frontend/src/css/Maleesha/CostumePage.module.css
@@ -1,4 +1,4 @@
-.main-container {
+.maincontainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,16 +7,16 @@
    scroll-behavior: smooth;
   }
   
-  .serviceList-container {
+  .serviceListcontainer {
     position: relative; /* Ensure this is positioned relative for z-index to work */
     z-index: 2; /* Higher z-index to stay above the fixed video */
-    margin-top: 40px;
+    margin-top: 100px;
     width: 100%;
     max-width: 1394px;
     margin-bottom: 30px;
   }
   
-  .products-container {
+  .productscontainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
     grid-gap: 15px;
@@ -26,7 +26,7 @@
     margin-top: 30px;
   }
 
-  .product-card {
+  .productcard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,18 +39,18 @@
     overflow: hidden; /* Prevents children from overflowing */
   }
   
-  .product-card:hover {
+  .productcard:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
   }
   
-  .product-card img {
+  .productcard img {
     width: 100%;
     height: 100%; 
     object-fit: cover; /* This will cover the area without stretching the image */
   }
   
-  .product-card p {
+  .productcard p {
     margin-top: 2px;
     padding: 0 10px; /* Add padding to maintain spacing within the card */
     text-align: center; /* Centers the text */
@@ -60,13 +60,13 @@
     height: 9%; /* Allocate the remaining 30% of the card's height to the text */
   }
 
-  .button-container{
+  .buttoncontainer{
     margin-top: 30px;
     margin-bottom: 30px;
   }
   
   
-  .pagination-button {
+  .paginationbutton {
     display: inline-block;
     margin-top: 20px;
     margin-right: 15px;
@@ -78,12 +78,12 @@
     transition: background-color 0.3s ease;
 }
 
-.pagination-button:hover {
+.paginationbutton:hover {
     background-color: #f3d616;
     transform: scale(1.1);
 }
 
-.button-icon {
+.buttonicon {
     width: 20px; 
     height: 20px;
     display: flex;
@@ -102,7 +102,7 @@
   overflow: hidden; 
 }
 
-.video-container {
+.videocontainer {
   position: absolute; 
   top: 0;
   left: 0;
@@ -111,13 +111,13 @@
   z-index: 1;
 }
 
-.video-container video {
+.videocontainer video {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.scrollable-content {
+.scrollablecontent {
   position: relative; 
   width: 50%;
   z-index: 2;
@@ -128,18 +128,18 @@
   text-align: center;
 }
 
-.scrollable-content h3{
+.scrollablecontent h3{
     font-size: 40px;
     margin-bottom: 30px;
 }
 
-.scrollable-content p{
+.scrollablecontent p{
     font-size: 20px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
 
-.styled-hr {
+.styledhr {
   border: 1; 
   height: 2px;
   background-image: linear-gradient(to right, #d20000, #ff5353, #d51919); 
