--- a/frontend/src/css/Maleesha/Homepage.module.css
+++ b/frontend/src/css/Maleesha/Homepage.module.css
@@ -1,20 +1,17 @@
 /* HomePage.css */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;700&display=swap');
 
-
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+.homepage {
+  width: 100%;
+  background-color: white;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  margin: 0;
 }
 
 .headercontainer{
   margin-top: 90px;
-}
-
-.homepage {
-    width: 100%;
+  background-color: #f9f9f9;
 }
 
 .slidecontainer {
@@ -22,6 +19,7 @@ body {
     height: 600px;
     overflow: hidden;
     margin: 40px;
+    margin-top: 120px;
 }
 
 .slidebackground {
@@ -157,6 +155,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   z-index: -2;
+  border-radius: 10px;
 }
 
 .containers {
@@ -171,6 +170,7 @@ body {
   padding: 15px;
   border-radius: 8px;
   background-color: #ffcdcd;
+  color: black;
 }
 
 /* Responsive design for smaller screens */
@@ -212,7 +212,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: stretch; /* This will make the children stretch to fill the container */
-    background-color: #ffffff;
+    background-color: #FEE1DD;
     padding: 20px;
     border-radius: 10px;
     margin-left: 40px;
@@ -230,7 +230,7 @@ body {
   
   .detailContainer {
     width: calc(100% - 850px); /* Adjust the width by reducing the map container's width */
-    background-color: #f9f9f9;
+    background-color: #E9C2C5;
     padding: 20px;
     border-radius: 10px;
   }
@@ -240,12 +240,12 @@ body {
     font-size: 30px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #333333; /* Darker color for better readability */
+    color: black; /* Darker color for better readability */
   }
   
   .locationicon {
     margin-right: 10px;
-    color: #363636; /* Color icon for a pop of color */
+    color: #535878; /* Color icon for a pop of color */
   }
   
   .contactInfo {
@@ -254,12 +254,12 @@ body {
   
   .contactInfo p {
     margin: 5px 0;
-    color: #555555; /* Soft color for text */
+    color:black; /* Soft color for text */
   }
   
   .contactInfo p span {
     font-weight: bold;
-    color: #333333; /* Darker color for important info */
+    color: black; /* Darker color for important info */
   }
 
   /*fixed bg*/
@@ -276,6 +276,7 @@ body {
     background-attachment: fixed;
     margin-left: 40px;
     margin-right: 40px;
+    border-radius: 10px;
   }
   
 .aboutcontent {
@@ -283,10 +284,11 @@ body {
     top: 0; 
     bottom: 0; 
     width: 37%; 
-    background-color: white;
-    /* opacity:0.7 ; */
+    background-color: #FEE1DD;
+    opacity:0.9 ;
     padding: 20px;
     font-family: 'Roboto', sans-serif;
+    border-radius: 10px;
     /* overflow: auto; Adds scrollbars if content overflows */
   }
   
@@ -303,7 +305,7 @@ body {
   text-align: justify;
   font-size: 16px; 
   line-height: 1.6; 
-  color: #333; 
+  color: black; 
   font-family: 'Faralista';
 }
 
@@ -315,7 +317,8 @@ body {
     justify-content: space-around; /* Align items with equal space around them */
     margin-left: 40px; /* Left margin */
     margin-right: 40px; /* Right margin */
-    background-color: beige;
+    background-color: #FEE1DD;
+    border-radius: 10px;
 }
 
 .staffinfo, .experienceinfo, .servicesinfo, .openinfo {
@@ -337,6 +340,7 @@ body {
     font-size: 1.2em; /* Adjust font size as needed */
     margin-top: 20px; /* Add margin between paragraphs */
     line-height: 2;
+    color: black;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
