--- a/frontend/src/css/Maleesha/header.module.css
+++ b/frontend/src/css/Maleesha/header.module.css
@@ -26,7 +26,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .1);
+    background: #0000001a;
     backdrop-filter: blur(50px);
     z-index: -1;
 }
@@ -38,7 +38,7 @@
     left: -100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg,transparent,rgba(255,255,255,.4),transparent);
+    background: linear-gradient(90deg,transparent,rgba(255, 255, 255, 0.4),transparent);
     transition: .5s;
 }
 
