--- a/frontend/src/css/Maleesha/Tables.module.css
+++ b/frontend/src/css/Maleesha/Tables.module.css
@@ -3,13 +3,17 @@
 .bodyContainer{
   background-color: white;
 }
+
+.headercontainer{
+  margin-bottom: 130px;
+}
   /*Service list*/
 .ServiceRec {
   height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url('../../images/Maleesha/floral-corner-frame.jpg');
+  background-color: #FEE1DD;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -19,7 +23,7 @@
 }
 
 .ServiceRec h2 {
-  color: rgb(255, 207, 0);
+  color: #CEA0AA;
   font-family: 'Vacelyn', sans-serif;
   font-size: 35px; 
   font-weight: 700; 
@@ -28,12 +32,13 @@
   margin-top: 30px;
 }
 
-.serviceName {
-  color: rgb(255, 207, 0);
-  font-family: 'Vacelyn', sans-serif;
+.serviceName h1 {
+  color: #CEA0AA;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:50px;
   position: absolute;
   top: 55%;
-  left: 250px;
+  left: 200px;
   transform: translateY(-50%);
 }
 
@@ -48,8 +53,8 @@
 }
 
 .ServicesBtn {
-  background-color: #FFCF00;
-  color: rgb(0, 0, 0);
+  background-color: #E9C2C5;
+  color: black;
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -66,8 +71,8 @@
 }
 
 .ServicesBtn:hover {
-  background-color: black;
-  color: #FFCF00;
+  background-color: #CEA0AA;
+  color: white;
 }
 
 /*TABLE */
@@ -99,11 +104,13 @@
   }
   
   .table th {
-    background-color: #69ffb1; 
+    background-color: #E9C2C5; 
   }
 
   .table td {
     color: #000000;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: lighter;
   }
   
   /* different background color to odd rows
