resolve table style error

--- a/frontend/src/css/Maleesha/QuoteAppointmentPage.module.css
+++ b/frontend/src/css/Maleesha/QuoteAppointmentPage.module.css
@@ -21,7 +21,7 @@
   }
   
   thead tr {
-    background-color: #009879;
+    background-color: white;
     color: #ffffff;
     text-align: left;
   }
@@ -38,9 +38,9 @@
     background-color: #f3f3f3;
   }
   
-  tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-  }
+  /* tbody tr:last-of-type {
+    border-bottom: 2px solid rgb(0, 0, 0);
+  } */
   
   tbody tr.active-row {
     font-weight: bold;
@@ -112,7 +112,6 @@
   thead th:last-child {
     position: sticky;
     top: 0;
-    background-color: #009879;
   }
   
   
