--- a/frontend/src/css/Maleesha/Dashboard.module.css
+++ b/frontend/src/css/Maleesha/Dashboard.module.css
@@ -1,4 +1,11 @@
 /* Dashboard Container */
+
+body {
+  background-color: white;
+  margin: 0; /* Reset default margin */
+  padding: 0; /* Reset default padding */
+}
+
 .dashboardContainer {
     display: flex;
     max-height: 100vh;
