--- a/frontend/src/css/Maleesha/DashBoardHome.module.css
+++ b/frontend/src/css/Maleesha/DashBoardHome.module.css
@@ -1,63 +1,60 @@
-body {
-    background-color: white;
-    margin: 0; /* Reset default margin */
-    padding: 0; /* Reset default padding */
-}
-
-.homeContainer {
-    background-color: white;
-}
-
-.dashboard-home {
+.dashboardhome {
     display: flex;
-    background-color: white;
-    flex-direction: row; /* Change to row to display horizontally */
-}
+ }
 
+  
 .popularService {
-    width: 50%; /* Adjust width to fit side by side */
-    background-color: #abd5ff;
+    width: 500px;
+    background-color: #f8f9fa; /* Change this to your preferred color */
     border-radius: 15px;
     padding: 20px;
+    /* box-sizing: border-box; */
 }
-
+  
 .popularService p {
     font-size: 1.5em;
     font-weight: bold;
 }
-
+  
 .popularService table {
     width: 100%;
     border-collapse: collapse;
 }
-
+  
 .popularService table th,
 .popularService table td {
     padding: 10px 30px; /* Increase space between columns */
     text-align: left;
-    color: black;
+    color: #000;
 }
 
 .popularService table th:nth-child(2),
 .popularService table td:nth-child(2) {
-    width: 20%;
-    text-align: center;
+  width: 20%; 
+  text-align: center;
+}
+
+.popularService table th{
+    background-color: bisque;
 }
 
 .popularService table tr:nth-child(even) {
-    background-color: #e9ecef;
+    background-color: #a2ffc4;
 }
-
+  
 .popularService table tr:hover {
     background-color: #ced4da; /* Add hover effect only to table rows, not the header */
 }
 
 .piechartcontainer {
     margin-top: 20px; /* Add margin for spacing */
-    margin-left: 20px; /* Adjust margin for spacing */
-    width: 30%; /* Adjust width to fit side by side */
+    margin-left: 40px;
+    width: 500px;
     background-color: #f8f9fa; /* Change this to your preferred color */
     border-radius: 15px;
+    display: flex;
+    flex-direction: column; /* Arrange children vertically */
+    align-items: center; /* Center horizontally */
     padding: 20px; /* Add padding for spacing */
 }
 
@@ -71,6 +68,27 @@ body {
 
 /* Adjust the size of the canvas */
 #pieChart {
-    width: 100%; /* Adjust width to fit container */
+    width: 400px;
     height: 400px;
 }
+
+/* .spinnercontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid rgb(0, 255, 217);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 120s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+} */
