--- a/frontend/src/css/Maleesha/Dashboard.module.css
+++ b/frontend/src/css/Maleesha/Dashboard.module.css
@@ -1,4 +1,3 @@
-/* Dashboard Container */
 
 body {
   background-color: white;
@@ -9,20 +8,47 @@ body {
 .dashboardContainer {
     display: flex;
     max-height: 100vh;
+    background-color: white;
   }
   
   /* Sidebar */
   .sideBar {
-    flex: 0 0 250px; /* Set sidebar width */
+    width: 300px;
+    height: 100%;
+    background-color: white;
   }
-  
-  /* Dashboard Content */
-  .dashboardContent {
-    flex: 1; /* Take up remaining space */
-    padding: 20px;
-    overflow: hidden;
+
+  .home{
+    width: 100%;
+    margin-top: 50px;
+    left: 100px;
   }
   
   .removeService{
+    width: 100%;
     margin-top: 100px;
+    margin-left: 220px;
   }
+
+.createService{
+  width: 100%;
+  margin-top: 100px;
+  margin-left: 250px;
+  justify-content: center;
+}
+
+.updateService{
+  width: 100%;
+  margin-left: 250px;
+  justify-content: center;
+}
+
+.viewQuotations{
+  margin-top: 10px;
+}
+
+.imageUpload{
+  width: 100%;
+  margin-left: 250px;
+  justify-content: center;
+}
