--- a/frontend/src/css/Maleesha/DeleteService.module.css
+++ b/frontend/src/css/Maleesha/DeleteService.module.css
@@ -1,4 +1,4 @@
-.main-delete-container {
+.maindeletecontainer {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -38,12 +38,14 @@
 
 .DeleteServiceBtn {
     background-color: #ff4d4d;
+    width: 400px;
     color: white;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 4px;
     cursor: pointer;
+    margin: 0 auto;
     transition: background-color 0.3s ease;
 }
 
