--- a/frontend/src/css/Maleesha/Tables.module.css
+++ b/frontend/src/css/Maleesha/Tables.module.css
@@ -94,7 +94,6 @@
 .table {
     width: 100%;
     border-collapse: collapse;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
   
   .table th,
@@ -105,18 +104,15 @@
   
   .table th {
     background-color: #E9C2C5; 
+    font-family:Arial, Helvetica, sans-serif;
   }
 
   .table td {
     color: #000000;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: lighter;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:normal;
   }
   
-  /* different background color to odd rows
-  .table tbody tr:nth-child(odd) {
-    background-color: #812b2b; 
-  } */
   
   
   /* Set specific widths for columns */
