--- a/frontend/src/css/Dasun/addBlogForm.module.css
+++ b/frontend/src/css/Dasun/addBlogForm.module.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 /* Styling for the Add New Blog page container */
-#Add_blog_page {
+.Add_blog_page {
     width: 80%;
     margin: auto;
     padding: 20px;
@@ -11,18 +11,18 @@
   }
   
   /* Styling for the heading of the Add New Blog page */
-  #Add_blog_page_Heading {
+  .Add_blog_page_Heading {
     text-align: center;
     color: #333;
   }
   
   /* Styling for the form inside the Add New Blog page */
-  #Add_blog_form {
+  .Add_blog_form {
     margin-top: 20px;
   }
   
   /* Styling for the topic input field */
-  #Add_blog_form_topic {
+  .Add_blog_form_topic {
     width: 90%;
     padding: 10px;
     margin-bottom: 15px;
@@ -31,7 +31,7 @@
   }
   
   /* Styling for the content textarea */
-  #Add_blog_form_content {
+  .Add_blog_form_content {
     width: 90%;
     height: 350px;
     padding: 10px;
@@ -41,12 +41,12 @@
   }
   
   /* Styling for the image upload input field */
-  #Add_blog_form_image {
+  .Add_blog_form_image {
     margin-bottom: 15px;
   }
   
   /* Styling for the submit button */
-  #Add_blog_form_submitBtn {
+  .Add_blog_form_submitBtn {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
@@ -57,7 +57,7 @@
   }
   
   /* Hover effect for the submit button */
-  #Add_blog_form_submitBtn:hover {
+  .Add_blog_form_submitBtn:hover {
     background-color: #0056b3;
   }
   
