--- a/frontend/src/css/Dasun/addFaqForm.module.css
+++ b/frontend/src/css/Dasun/addFaqForm.module.css
@@ -1,7 +1,7 @@
 /* faqFormStyles.css */
 
 /* Styling for the Add FAQ page container */
-#add_Faq_page {
+.add_Faq_page {
     width: 95%;
     margin: auto;
     padding: 20px;
@@ -11,8 +11,8 @@
   }
   
   /* Styling for the labels */
-  #add_Faq_page_form_label_question,
-  #add_Faq_page_form_label_answer {
+  .add_Faq_page_form_label_question,
+  .add_Faq_page_form_label_answer {
     font-weight: bold;
     color: #333;
     margin-right: 10px;
@@ -20,8 +20,8 @@
   }
   
   /* Styling for the input fields */
-  #add_Faq_page_form_input_question,
-  #add_Faq_page_form_input_answer {
+  .add_Faq_page_form_input_question,
+  .add_Faq_page_form_input_answer {
     width: 80%;
     padding: 10px;
     margin-bottom: 15px;
@@ -30,7 +30,7 @@
   }
   
   /* Styling for the submit button */
-  #add_Faq_page_form_submitBtn {
+  .add_Faq_page_form_submitBtn {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
@@ -41,7 +41,7 @@
   }
   
   /* Hover effect for the submit button */
-  #add_Faq_page_form_submitBtn:hover {
+  .add_Faq_page_form_submitBtn:hover {
     background-color: #0056b3;
   }
   
