--- a/frontend/src/css/Dasun/addMessage.module.css
+++ b/frontend/src/css/Dasun/addMessage.module.css
@@ -1,4 +1,4 @@
-#send_message_page {
+.send_message_page {
     width: 80%;
     margin: auto;
     padding: 20px;
@@ -7,12 +7,12 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
-  #send_message_page_form_label_message {
+  .send_message_page_form_label_message {
     font-weight: bold;
     color: #333;
   }
 
-  #send_message_page_form_input_message {
+  .send_message_page_form_input_message {
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
@@ -20,7 +20,7 @@
     border-radius: 4px;
   }
 
-  #send_message_page_form_submitBtn {
+  .send_message_page_form_submitBtn {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
