--- a/frontend/src/css/Anoj/InventoryDashboradSideBar.module.css
+++ b/frontend/src/css/Anoj/InventoryDashboradSideBar.module.css
@@ -14,46 +14,46 @@
 }
 
 /* Salon Name */
-.salon-name {
+.salonName {
   font-size: 24px;
   margin-bottom: 20px;
 }
 
 /* Dashboard Title */
-.dashboard-title {
+.dashboardTitle {
   margin-top: 40px;
   margin-bottom: 20px;
 }
 
 /* Dashboard Heading */
-.dashboard-heading {
+.dashboardHeading {
   font-size: 20px;
   text-align: left;
 }
 
 /* Dashboard Divider */
-.dashboard-divider {
+.dashboardDivider {
   border: 1px solid #9b9a9a;
   margin-top: 10px;
 }
 
 /* Sidebar Navigation */
-.sidebar-nav {
+.sidebarNav {
   margin-top: 40px;
   text-align: left;
 }
 
-.nav-list {
+.navList {
   list-style: none;
   padding: 0;
 }
 
-.nav-item {
+.navItem {
   margin-bottom: 30px;
 }
 
 /* Nav Button */
-.nav-button {
+.navButton {
   display: flex; /* Use flexbox for alignment */
   align-items: center; /* Vertically center items */
   justify-content: flex-start; /* Align items to the left */
@@ -69,18 +69,18 @@
 }
 
 /* Hover Effect */
-.nav-button:hover {
+.navbutton:hover {
   color: #ffcc00;
 }
 
 /* Active Button */
-.nav-button.active {
+.navbutton.active {
   border-radius: 10px;
   border: 1px solid #ffcc00;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
   transform: scale(1.05); /* Slightly enlarges the button */
 }
 
-.button-icon {
+.buttonicon {
   font-size: 20px; /* Icon size */
 }
