--- a/frontend/src/css/Maleesha/Dashboard.module.css
+++ b/frontend/src/css/Maleesha/Dashboard.module.css
@@ -7,7 +7,7 @@ body {
 
 .dashboardContainer {
     display: flex;
-    max-height: 100vh;
+    max-height:none;
     background-color: white;
   }
   
