--- a/frontend/src/css/Maleesha/DashBoardHome.module.css
+++ b/frontend/src/css/Maleesha/DashBoardHome.module.css
@@ -1,16 +1,45 @@
+.homeContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .dashboardhome {
     display: flex;
- }
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    
+}
 
   
 .popularService {
-    width: 500px;
-    background-color: #f8f9fa; /* Change this to your preferred color */
-    border-radius: 15px;
-    padding: 20px;
-    /* box-sizing: border-box; */
+    flex: 1;
+    margin-right: 20px; /* Adjust margin for spacing */
+    margin-right: 50px;
 }
   
+.piechartcontainer {
+    flex: 1;
+    margin-bottom: 20px; /* Adjust margin for spacing */
+}
+
+.totalServices {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.totalServices iframe {
+    width: calc(50% - 20px); /* Each chart takes 50% width with a gap of 20px */
+    height: 300px;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 10px 0 rgba(70, 76, 79, 0.2);
+    margin-bottom: 20px; /* Adjust margin for spacing */
+}
+
 .popularService p {
     font-size: 1.5em;
     font-weight: bold;
@@ -46,18 +75,6 @@
     background-color: #ced4da; /* Add hover effect only to table rows, not the header */
 }
 
-.piechartcontainer {
-    margin-top: 20px; /* Add margin for spacing */
-    margin-left: 40px;
-    width: 500px;
-    background-color: #f8f9fa; /* Change this to your preferred color */
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column; /* Arrange children vertically */
-    align-items: center; /* Center horizontally */
-    padding: 20px; /* Add padding for spacing */
-}
-
 .piechartcontainer p {
     margin-top: 0; /* Remove default margin */
     margin-bottom: 10px; /* Add margin for spacing */
@@ -72,23 +89,3 @@
     height: 400px;
 }
 
-/* .spinnercontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid rgb(0, 255, 217);
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 120s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-} */
